--- a/code/data_sim.Rmd
+++ b/code/data_sim.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Simulate data in R with package `faux`"
+title: "Simulate data in R with the `faux` package"
 author: '[Antonio Schettino](https://antonio-schettino.com/ "Antonio Schettino")'
 date: '`r Sys.Date()`'
 output:
@@ -972,7 +972,7 @@ Yes, `faux` did a good job.
 
 ## The tiranny of normality
 
-At present, `faux` only generates samples from normal distributions. As mentioned earlier, base `R` functions allow to simulate data from non-normal distributions. This is a good solution for between-subject designs, but more complex designs with correlated variables may be more difficult to set up. In these situations, better consult a statistician.
+At present, `faux` only generates samples from normal distributions. As mentioned earlier, base `R` functions allow to simulate data from non-normal distributions (follow [this link](https://aosmith.shinyapps.io/tutorial_simulation_helper_functions/) for a nice interactive tutorial by [Ariel Muldoon](https://twitter.com/aosmith16)). This is a good solution for between-subject designs, but more complex designs with correlated variables may be more difficult to set up. In these situations, better consult a statistician.
 
 If you wish to generate data similar to an already existing dataset, I recommend the R package [`synthpop`](https://cran.r-project.org/web/packages/synthpop/index.html). A separate workshop demonstrates how to use this great package to generate synthetic data of various complexity.
 
